# tracker-firmware

./: Cargo.toml  README.md  platformio.ini
.cargo/: config.toml
src/: main.rs  utils.rs
src/utils/: mqtt_utils.rs
